--- a/views/decode.html
+++ b/views/decode.html
@@ -21,7 +21,7 @@
           <textarea class="enyo-input input" id="form-fields_jwt" name="jwt" placeholder="JWT" rows="10" cols="30"><%= jwt %></textarea>
           <div class="label" id="form-fields_public_keyLabel">Public Key
             <% if (example) { %>- <span id="warn">Replace example with your Public Key</span><% } %>
-            <% if (extracted) { %>- <span id="warn">Extracted from the Private Key entered</span><% } %>
+            <% if (extracted) { %>- <span id="valid">Extracted from the Private Key entered</span><% } %>
           </div>
           <textarea class="enyo-input input" id="form-fields_public_key" name="pubKey" placeholder="Public Key" rows="7" cols="65"><%= pubKey %></textarea>
           <input class="enyo-tool-decorator onyx-button enyo-unselectable button" name="submit" id="form-fields_loginButton" type="submit" value="Decode JWT"/>
